--- a/frontend_snippets/mochi_menu/layout.css
+++ b/frontend_snippets/mochi_menu/layout.css
@@ -29,6 +29,15 @@ body {
   background: snow;
 }
 
+.click-box {
+  position: absolute;
+  top: 0px;
+  width: 60px;
+  height: 40px;
+  -webkit-transition: all 550ms cubic-bezier(0, 0.74, 0.2, 1.01);
+  transition: all 550ms cubic-bezier(0, 0.74, 0.2, 1.01);
+}
+
 .mochi {
   position: absolute;
   background: snow;
@@ -36,8 +45,8 @@ body {
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  -webkit-transition: all 550ms cubic-bezier(0, 0.74, 0.2, 1.01);
-  transition: all 550ms cubic-bezier(0, 0.74, 0.2, 1.01);
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
 }
 
 .position-1 {
@@ -63,7 +72,7 @@ body {
     top: 40px;
   }
   100% {
-    top: 8px;
+    top: 0px;
   }
 }
 
@@ -72,7 +81,7 @@ body {
     top: 40px;
   }
   100% {
-    top: 8px;
+    top: 0px;
   }
 }
 /*# sourceMappingURL=layout.css.map */
