--- a/frontend_snippets/mochi_menu/layout.css
+++ b/frontend_snippets/mochi_menu/layout.css
@@ -13,7 +13,8 @@ body {
 
 #blob-loader {
   overflow: hidden;
-  position: absolute;
+  position: relative;
+  margin: auto;
   padding: 64px;
   text-align: left;
   width: 320px;
@@ -22,11 +23,62 @@ body {
   filter: url("#blob");
 }
 
-.menu-bar {
+.menu-block {
   position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 320px;
+  height: 40px;
+}
+
+.menu-rect {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 320px;
   height: 40px;
   background: snow;
+}
+
+.anime_swell {
+  width: 320px;
+  height: 40px;
+  -webkit-animation: swell 1s ease 0s 1 alternate both running;
+          animation: swell 1s ease 0s 1 alternate both running;
+}
+
+@-webkit-keyframes swell {
+  0% {
+    width: 320px;
+    height: 40px;
+  }
+  50% {
+    width: 328px;
+    height: 48px;
+  }
+  100% {
+    width: 320px;
+    height: 40px;
+  }
+}
+
+@keyframes swell {
+  0% {
+    width: 320px;
+    height: 40px;
+  }
+  50% {
+    width: 328px;
+    height: 48px;
+  }
+  100% {
+    width: 320px;
+    height: 40px;
+  }
 }
 
 .click-box {
@@ -63,16 +115,19 @@ body {
 
 .anime_drop {
   top: 40px;
-  -webkit-animation: drop 0.5s ease 0s 2 alternate both running;
-          animation: drop 0.5s ease 0s 2 alternate both running;
+  -webkit-animation: drop 1s ease 0s 1 alternate both running;
+          animation: drop 1s ease 0s 1 alternate both running;
 }
 
 @-webkit-keyframes drop {
   0% {
     top: 40px;
   }
-  100% {
+  50% {
     top: 0px;
+  }
+  100% {
+    top: 40px;
   }
 }
 
@@ -80,8 +135,11 @@ body {
   0% {
     top: 40px;
   }
-  100% {
+  50% {
     top: 0px;
+  }
+  100% {
+    top: 40px;
   }
 }
 /*# sourceMappingURL=layout.css.map */
