--- a/frontend_snippets/mochi_menu/layout.scss
+++ b/frontend_snippets/mochi_menu/layout.scss
@@ -22,7 +22,8 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
 
     #blob-loader {
         overflow: hidden;
-        position: absolute;
+        position: relative;
+        margin: auto;
         padding: 64px;
         text-align: left;
         width: $menu_width;
@@ -31,11 +32,46 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
         filter: url("#blob");
     }   
 
-    .menu-bar {
+    .menu-block {
         position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: $menu_width;
+        height: $menu_height;
+    }
+    .menu-rect {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         width: $menu_width;
         height: $menu_height;
         background: snow;
+        
+    }
+    .anime_swell{
+        width: $menu_width;
+        height: $menu_height;
+        animation: swell 1s ease 0s 1 alternate both running;
+    }
+    @keyframes swell {
+        0% {
+            width: $menu_width;
+            height: $menu_height;
+        }
+        50% {
+            width: $menu_width+8px;
+            height: $menu_height+8px;
+        }
+        // 90% {
+        //     width: $menu_width - 2px;
+        //     height: $menu_height - 2px;
+        // }
+        100% {
+            width: $menu_width;
+            height: $menu_height;
+        }
     }
 
     .click-box {
@@ -66,14 +102,20 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
 
     .anime_drop {
         top: 40px;
-        animation: drop 0.5s ease 0s 2 alternate both running;
+        animation: drop 1s ease 0s 1 alternate both running;
     }
 
     @keyframes drop {
     0% {
         top: $menu_height * 1;
     }
-    100% {
+    50% {
         top: $menu_height * 0;
+    }
+    // 90%{
+    //     top: $menu_height * 1.1;
+    // }
+    100% {
+        top: $menu_height * 1;
     }
 }
