--- a/frontend_snippets/mochi_menu/mochi_menu.pug
+++ b/frontend_snippets/mochi_menu/mochi_menu.pug
@@ -14,12 +14,9 @@ html(lang='ja')
         link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css")
 
     body
-        i.menu-icon.far.fa-bell
         #mochi_menu
-
             div(v-for="item in menu_items")
-                | {{ item }}
-
+                i.menu-icon.far(v-bind:class="item.classname")
             #blob-loader
                 .menu-rect(
                     v-bind:class="{'anime_swell': click_flash}")
@@ -45,17 +42,17 @@ html(lang='ja')
                 el: '#mochi_menu',
                 data: {
                     mochi_num : 3,
-                    menu_items : {
-                        item1: {
-                            fa_icon: "fa-square"
+                    menu_items : [
+                        {
+                            classname: {"fa-square": true}
                         },
-                        item2: {
-                            fa_icon: "fa-bell"
+                        {
+                            classname: {"fa-bell": true}
                         },
-                        item3: {    
-                            fa_icon: "fa-bookmark"
+                        {    
+                            classname: {"fa-bookmark": true}
                         }
-                    },
+                    ],
                     active_menu: 1,
                     click_flash: false,
                     on_animation: false,
@@ -92,7 +89,7 @@ html(lang='ja')
                     }
                 },
                 computed: {
-                    position_class: function() { //2020.11.15やっとできた。この7行に8時間ぐらいかかった。
+                    position_class: function() {
                         let array = [];
                         for (let i=1; i<=this.mochi_num; i++ ){
                             if(this.active_menu == i){
