remove 'num' data, alternate array.length

--- a/frontend_snippets/mochi_menu/layout.scss
+++ b/frontend_snippets/mochi_menu/layout.scss
@@ -41,7 +41,7 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
         height: $menu_height;
     }
     .menu-icon {
-        
+        color: snow;
     }
     .menu-rect {
         position: absolute;
