--- a/frontend_snippets/mochi_menu/mochi_menu.pug
+++ b/frontend_snippets/mochi_menu/mochi_menu.pug
@@ -1,5 +1,4 @@
 // console $ pug -w ./ -o ./ -P
-- const mochi_num = 3;
 
 doctype html
 html(lang='ja')
@@ -21,10 +20,10 @@ html(lang='ja')
                 .menu-rect(
                     v-bind:class="{'anime_swell': click_flash}")
                 .menu-block
-                    for i in [...Array(mochi_num).keys()].map(i => ++i)
+                    div(v-for="(item, index) in menu_items")
                         .click-box(
-                            class=`position-${i}` 
-                            v-on:click=`menu_click(${i})` )
+                            v-bind:class="`position-${index+1}`" 
+                            v-on:click=`menu_click(index+1)`)
                     .mochi(
                         v-bind:class="[position_class, {'anime_drop': click_flash}]")
 
@@ -41,7 +40,6 @@ html(lang='ja')
             const mochi_menu = new Vue({
                 el: '#mochi_menu',
                 data: {
-                    mochi_num : 3,
                     menu_items : [
                         {
                             classname: {"fa-square": true}
@@ -69,12 +67,12 @@ html(lang='ja')
                         this.start_click_flash();
                         this.start_anime_timer();
                         this.active_menu = n;
-                        console.log("active_menu",this.active_menu);
+                        console.log("[active_menu] = ",this.active_menu);
                     },
                     start_click_flash: function () {
                         this.click_flash = false;
                         setTimeout(
-                            ()=>{ this.click_flash = true;console.log("flash", this.click_flash); },
+                            ()=>{ this.click_flash = true;},
                             1
                         );
                         
@@ -82,16 +80,19 @@ html(lang='ja')
                     start_anime_timer: function () {
                         this.on_animation = true;
                         setTimeout(
-                            ()=>{ this.on_animation = false; },
+                            ()=>{ 
+                                this.on_animation = false;
+                                console.log("stop anime timer");
+                            },
                             this.anime_reqired_time
                         );
-                        console.log("timer");
+                        console.log("start anime timer");
                     }
                 },
                 computed: {
                     position_class: function() {
                         let array = [];
-                        for (let i=1; i<=this.mochi_num; i++ ){
+                        for (let i=1; i<=this.menu_items.length; i++ ){
                             if(this.active_menu == i){
                                 array.push(`position-${i}`);
                             }
