--- a/frontend_snippets/mochi_menu/layout.css
+++ b/frontend_snippets/mochi_menu/layout.css
@@ -5,22 +5,25 @@
 
 body {
   background: tan;
-  text-align: center;
   width: 100%;
   height: 100%;
-  font-family: "Open Sans", sans-serif;
+}
+
+#mochi_menu {
+  margin: auto;
 }
 
 #blob-loader {
   overflow: hidden;
   position: relative;
-  margin: auto;
-  padding: 64px;
-  text-align: left;
-  width: 320px;
-  height: 120px;
   -webkit-filter: url("#blob");
   filter: url("#blob");
+}
+
+.menu-size-wrapper {
+  padding: 64px;
+  width: 320px;
+  height: 80px;
 }
 
 .menu-block {
@@ -33,8 +36,19 @@ body {
   height: 40px;
 }
 
+.menu-icon-layer {
+  position: absolute;
+  z-index: 1;
+}
+
 .menu-icon {
-  color: snow;
+  position: absolute;
+  z-index: 1;
+  top: 20px;
+  left: 30px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: tan;
 }
 
 .menu-rect {
@@ -87,11 +101,11 @@ body {
 
 .click-box {
   position: absolute;
+  border: gray solid 1px;
+  z-index: 3;
   top: 0px;
   width: 60px;
   height: 40px;
-  -webkit-transition: all 550ms cubic-bezier(0, 0.74, 0.2, 1.01);
-  transition: all 550ms cubic-bezier(0, 0.74, 0.2, 1.01);
 }
 
 .mochi {
