--- a/frontend_snippets/mochi_menu/layout.scss
+++ b/frontend_snippets/mochi_menu/layout.scss
@@ -54,7 +54,14 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
         left: $mochi_r/2;
         transform: translate(-50%, -50%);
         color: tan;
+        font-size: $mochi_r * 0.3;
+        transition: all 1s ease-out;
         
+    }
+    .menu-icon-drop {
+        top: $menu_height + $mochi_r/2;
+        font-size: $mochi_r * 0.4;
+        transition: all 1s ease-in;
     }
     .menu-rect {
         position: absolute;
@@ -92,7 +99,7 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
 
     .click-box {
         position: absolute;
-        border: gray solid 1px;
+        // border: gray solid 1px;
         z-index: 3;
         top: 0px;
         width: $mochi_r;
@@ -106,7 +113,7 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
         width: $mochi_r;
         height: $mochi_r;
         border-radius: 50%;
-        transition: all 1s ease;
+        transition: all 1s ease-in-out;
     }
 
 
@@ -118,7 +125,7 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
 
     .anime_drop {
         top: 40px;
-        animation: drop 1s ease 0s 1 alternate both running;
+        animation: drop 1s ease-in-out 0s 1 alternate both running;
     }
 
     @keyframes drop {
