--- a/frontend_snippets/mochi_menu/layout.scss
+++ b/frontend_snippets/mochi_menu/layout.scss
@@ -8,15 +8,15 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
 
 
 * {
-        margin: 0px;
-        padding: 0px;
-    }
+    margin: 0px;
+    padding: 0px;
+}
 
-    body {
-        background: tan;
-        width: 100%;
-        height: 100%;
-    }
+body {
+    background: tan;
+    width: 100%;
+    height: 100%;
+}
 
     #mochi_menu {
         margin: auto;
@@ -73,29 +73,46 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
         background: snow;
         
     }
-    .anime_swell{
-        width: $menu_width;
-        height: $menu_height;
-        animation: swell 1s ease 0s 1 alternate both running;
+    .swell_normal{
+        animation: swell 0.5s ease-out 0s 2 alternate both running;
     }
     @keyframes swell {
         0% {
             width: $menu_width;
             height: $menu_height;
         }
-        50% {
+        100% {
             width: $menu_width+8px;
             height: $menu_height+8px;
         }
-        // 90% {
-        //     width: $menu_width - 2px;
-        //     height: $menu_height - 2px;
-        // }
+    }
+    .swell_0_to_X{
+        animation: swell_0_to_X 1s ease-out 0s 1 alternate both running;
+    }
+    @keyframes swell_0_to_X {
+        0% {
+            width: $menu_width+8px;
+            height: $menu_height+8px;
+        }
         100% {
             width: $menu_width;
             height: $menu_height;
         }
     }
+    .swell_X_to_0{
+        animation: swell_X_to_0 1s ease-out 0s 1 alternate both running;
+    }
+    @keyframes swell_X_to_0 {
+        0% {
+            width: $menu_width;
+            height: $menu_height;
+        }
+        100% {
+            width: $menu_width+8px;
+            height: $menu_height+8px;
+        }
+    }
+    
 
     .click-box {
         position: absolute;
@@ -104,8 +121,10 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
         top: 0px;
         width: $mochi_r;
         height: $menu_height;
+        cursor: pointer;
+    }.click-box-drop {
+        height: $menu_height + $mochi_r;
     }
-
     .mochi {
         position: absolute;
         background: snow;
@@ -113,6 +132,7 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
         width: $mochi_r;
         height: $mochi_r;
         border-radius: 50%;
+        cursor: pointer;
         transition: all 1s ease-in-out;
     }
 
@@ -123,22 +143,44 @@ $margin: calc( ( #{$menu_width} - #{$mochi_r} * #{$mochi_num} ) / (#{$mochi_num}
         }
     }
 
-    .anime_drop {
+    .drop_normal {
         top: 40px;
-        animation: drop 1s ease-in-out 0s 1 alternate both running;
+        animation: drop 1s ease-in-out 0s 1 alternate none running;
+        transition: all 1s ease-in;
     }
 
     @keyframes drop {
-    0% {
-        top: $menu_height * 1;
+        0% {
+            top: $menu_height * 1;
+        }
+        50% {
+            top: $menu_height * 0;
+        }
+        100% {
+            top: $menu_height * 1;
+        }
     }
-    50% {
-        top: $menu_height * 0;
+    .drop_0_to_X {
+        animation: drop_0_to_X 1s ease-in-out 0s 1 alternate both running;
     }
-    // 90%{
-    //     top: $menu_height * 1.1;
-    // }
-    100% {
-        top: $menu_height * 1;
+    @keyframes drop_0_to_X {
+        0% {
+            top: $menu_height * 0;
+        }
+        100% {
+            top: $menu_height * 1;
+        }
     }
-}
+    .drop_X_to_0 {
+        top: 0px;
+        animation: drop_X_to_0 1s ease-in-out 0s 1 alternate both running;
+    }
+    @keyframes drop_X_to_0 {
+        0% {
+            top: $menu_height * 1;
+        }
+        100% {
+            top: $menu_height * 0;
+        }
+    }
+    
