--- a/frontend_snippets/mochi_menu/mochi_menu.pug
+++ b/frontend_snippets/mochi_menu/mochi_menu.pug
@@ -5,7 +5,7 @@ html(lang='ja')
     head
         meta(charset='UTF-8')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
-        title もちメニュー
+        title もちメニュー　-Mochi Menu-
         meta(name='description', content=description)
         meta(name='keywords', content=keywords)
 
@@ -19,12 +19,13 @@ html(lang='ja')
                     div(v-for="(item, index) in menu_items" 
                         style="position:relative;"
                         v-bind:class="`position-${index+1}`")
-                        .click-box(v-on:click=`menu_click(index+1)`)
+                        .click-box( v-on:click=`menu_click(index+1)`
+                                    v-bind:class="{'click-box-drop': active_menu==index+1}")
                         i.menu-icon(
                             v-bind:class="[item.classname, {'menu-icon-drop': active_menu==index+1}]")
             #blob-loader.menu-size-wrapper
                 .menu-rect(
-                    v-bind:class="{'anime_swell': click_flash}")
+                    v-bind:class="rect_swell_class")
                 .menu-block
                     .mochi(
                         v-bind:class="[position_class, mochi_vertical_class]")
@@ -53,7 +54,8 @@ html(lang='ja')
                             classname: {"far fa-bookmark": true}
                         }
                     ],
-                    active_menu: 1,
+                    active_menu: 0,
+                    pre_active_menu: 2,
                     click_flash: false,
                     on_animation: false,
                     anime_reqired_time: 1000
@@ -65,8 +67,14 @@ html(lang='ja')
                         }
                         this.start_click_flash();
                         this.start_anime_timer();
-                        this.active_menu = n;
-                        console.log("[active_menu] = ",this.active_menu);
+                        this.pre_active_menu = this.active_menu;
+                        if(n != this.active_menu){
+                            
+                            this.active_menu = n;
+                        }else {
+                            this.active_menu = 0;
+                        }
+                        console.log("[active_menu] = ",this.active_menu, this.pre_active_menu);
                     },
                     start_click_flash() {
                         this.click_flash = false;
@@ -90,13 +98,28 @@ html(lang='ja')
                 },
                 computed: {
                     position_class() {
-                        return `position-${this.active_menu}`;
+                        let num = this.active_menu;
+                        if(this.active_menu==0) {
+                            num = this.pre_active_menu;
+                            console.log("position cancel:", num);
+                        }
+                        
+                        return `position-${num}`;
                     },
                     mochi_vertical_class() {
                         console.log("mochiV");
-                        let array = []
-                        if(this.click_flash) array.push('anime_drop');
-                        return array;
+                        let str = ''
+                        if(this.active_menu==0 && this.pre_active_menu!=0) str='drop_X_to_0';
+                        else if(this.pre_active_menu==0) str='drop_0_to_X';
+                        else if(this.click_flash) str='drop_normal';
+                        return str;
+                    },
+                    rect_swell_class() {
+                        let str = '';
+                        if(this.active_menu==0 && this.pre_active_menu!=0) str='swell_X_to_0';
+                        else if(this.pre_active_menu==0) str='swell_0_to_X';
+                        else if(this.click_flash) str='swell_normal'
+                        return str;
                     }
                 },
 
