--- a/frontend_snippets/mochi_menu/mochi_menu.pug
+++ b/frontend_snippets/mochi_menu/mochi_menu.pug
@@ -14,7 +14,7 @@ html(lang='ja')
 
     body
         #mochi_menu
-            .menu-icon-layer-wrapper
+            .menu-relative
                 #menu-icon-layer.menu-block
                     div(v-for="(item, index) in menu_items" 
                         style="position:relative;"
@@ -23,7 +23,7 @@ html(lang='ja')
                                     v-bind:class="{'click-box-drop': active_menu==index+1}")
                         i.menu-icon(
                             v-bind:class="[item.classname, {'menu-icon-drop': active_menu==index+1}]")
-                #blob-loader.menu-size-wrapper
+                #blur-layer.menu-size-wrapper
                     .menu-rect(
                         v-bind:class="rect_swell_class")
                     .menu-block
@@ -31,13 +31,14 @@ html(lang='ja')
                             v-bind:class="[position_class, mochi_vertical_class]")
 
             #content-wrapper
-
+                .content-icon(v-for="(item, index) in menu_items")
+                    i(v-if="active_menu==index+1" v-bind:class="item.classname")
 
             svg(xmins="http://www.w3.org/2000/svg", version="1.1")
                 defs  
-                    filter#blob
+                    filter#blur
                         fegaussianblur(in="SourceGraphic" result="blur" stdDeviation="8")
-                        fecolormatrix(in="blur" result="blob" mode="matrix" 
+                        fecolormatrix(in="blur" result="res" mode="matrix" 
                             values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 40 -10")
                 
 
