--- a/frontend_snippets/mochi_menu/layout.css
+++ b/frontend_snippets/mochi_menu/layout.css
@@ -5,19 +5,19 @@
 
 body {
   background: tan;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 #mochi_menu {
   margin: auto;
 }
 
-#blob-loader {
+#blur-layer {
   overflow: hidden;
   position: absolute;
-  -webkit-filter: url("#blob");
-  filter: url("#blob");
+  -webkit-filter: url("#blur");
+  filter: url("#blur");
 }
 
 .menu-size-wrapper {
@@ -36,7 +36,7 @@ body {
   height: 40px;
 }
 
-.menu-icon-layer-wrapper {
+.menu-relative {
   position: relative;
   margin: auto;
   width: 448px;
@@ -283,5 +283,44 @@ body {
   height: 280px;
   background-color: snow;
   border-radius: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.content-icon {
+  display: inline-block;
+  color: tan;
+}
+
+.content-icon i {
+  opacity: 0.5;
+  font-size: 64px;
+  -webkit-animation: blink 1.5s ease-in-out 0s infinite alternate both running;
+          animation: blink 1.5s ease-in-out 0s infinite alternate both running;
+}
+
+@-webkit-keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.5;
+  }
 }
 /*# sourceMappingURL=layout.css.map */
