credit-card-checkout bind

--- a/frontend_snippets/daily_ui/credit-card-checkout/layout.css
+++ b/frontend_snippets/daily_ui/credit-card-checkout/layout.css
@@ -14,17 +14,21 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 body {
     background: var(--bg-color);
 }
 
-div {
-    /* border: 4px solid var(--main-color);
-    margin: 10px;
-    min-width: 60px;
-    min-height: 40px; */
+.corp-logo {
+    margin-top: 40px;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 700;
+}
+.corp-logo i {
+    /* color: var(--main-color); */
 }
 
 #credit-card-checkout {
@@ -32,7 +36,7 @@ div {
     max-width: 1080px;
     min-width: 720px;
     margin: auto;
-    margin-top: 240px;
+    margin-top: 80px;
     display: flex;
     justify-content: space-around;
 }
@@ -40,6 +44,7 @@ div {
 .left-box {
     width: 50%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -52,13 +57,35 @@ div {
         var(--main-color-shadow)
     );
     width: 360px;
-    height: 220px;
-    border-radius: 20px;
-    box-shadow: 2px 4px 16px 4px rgba(0, 0, 0, 0.1);
+    height: 240px;
+    border-radius: 16px;
+    box-shadow: 2px 4px 16px 4px rgba(0, 0, 0, 0.2);
     color: var(--bg-color);
+    padding: 0px 20px;
 }
-.card-box svg {
-    fill: #f8e7a3;
+
+.card-number {
+    height: 40px;
+    margin-top: 30%;
+    letter-spacing: 4px;
+    font-weight: 700;
+}
+
+.card-info {
+    margin-top: 40px;
+    font-size: 11px;
+    display: flex;
+}
+.card-info > div:first-child {
+    width: 40%;
+}
+.card-info > div {
+    width: 30%;
+}
+.info-prop {
+    font-size: 12px;
+    font-weight: 700;
+    margin-top: 4px;
 }
 
 .right-box {
@@ -70,23 +97,12 @@ div {
     font-size: 22px;
     font-weight: 700;
     color: var(--main-color);
-}
-
-.bottom-input {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.bottom-input > label {
-}
-.bottom-input > label:nth-child(2) {
-    width: 40%;
-    margin-left: 40px;
+    margin-bottom: 60px;
 }
 
 label {
     display: block;
-    margin: 40px 0px;
+    margin-bottom: 40px;
     font-size: 16px;
 }
 
@@ -107,4 +123,29 @@ input:focus {
     border: none;
     border-bottom: 2px solid var(--main-color);
     outline: 0;
+}
+
+button {
+    display: block;
+    margin: auto;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 40px;
+    background-color: var(--main-color);
+    color: var(--bg-color);
+    box-shadow: 2px 4px 16px 0px rgba(0, 0, 0, 0.2);
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    cursor: pointer;
+}
+
+.bottom-input {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.bottom-input > label:nth-child(2) {
+    width: 40%;
+    margin-left: 40px;
 }
