--- a/threejs/tree/main.css
+++ b/threejs/tree/main.css
@@ -25,7 +25,7 @@ canvas#myCanvas {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
 }
 .centering-inner {
     padding-bottom: 10%;
@@ -58,4 +58,16 @@ nav#main-menu {
 }
 .main-logo {
     font-weight: 900;
+}
+.top-logo {
+    /* width: 320px; */
+    /* margin: 40px 40px; */
+    padding: 20px 0px;
+    height: 10vh;
+    font-size: 20px;
+    color: white;
+    font-weight: 100;
+    /* text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4); */
+    text-align: center;
+    background-color: #43291f;
 }
