--- a/cyber_ui/style.css
+++ b/cyber_ui/style.css
@@ -30,6 +30,19 @@ ul.grid li {
     box-shadow: 0px 0px 4px 1px #ccc;
 }
 
+ul.grid li > div {
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    height: 100%;
+}
+
+.button1 {
+    /* display: block; */
+    width: 96px;
+    height: 48px;
+}
+
 .background-pattern {
     background-color: var(--color-back);
     background-image: linear-gradient(-90deg, var(--color-bgline) 5%, transparent 6%), linear-gradient(var(--color-bgline) 5%, transparent 6%);
