--- a/svg_animation/main.css
+++ b/svg_animation/main.css
@@ -5,6 +5,10 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Kosugi Maru', sans-serif;
+
+    color: white;
+    letter-spacing: 0.1em;
+    line-height: 1.4em;
 }
 
 #particles {
@@ -25,15 +29,17 @@
 
 .overlay-screen {
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     border: 16px solid white;
+    padding-top: 100vh;
+    padding-bottom: 240px;
 }
 
 .logo {
     position: absolute;
-    top: 30%;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 64px;
@@ -79,7 +85,7 @@
 
 .ship {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -142,7 +148,7 @@
     }
 }
 .wave {
-    position: absolute;
+    position: fixed;
     top: 70vh;
     display: block;
     width: 100%;
@@ -172,4 +178,12 @@
     100% {
         top: 70vh;
     }
+}
+
+.content-area h1 {
+    margin: 20px 40px;
+}
+
+.content-area > div {
+    margin: 20px 40px;
 }
